--- a/filu.html
+++ b/filu.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>    
-    <canvas id="canvas" width="400" height="400"></canvas>    
+    <h3>Size: <span id="sizeElement" /></h3>
+    <canvas id="canvas" width="600" height="600"></canvas>    
 
     <script>
         show();
