--- a/filu.html
+++ b/filu.html
@@ -2,16 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<script src="filu.js"></script>
 <title>Filu</title>
 </head>
 
-<body>    
-    <h3>Size: <span id="sizeElement" /></h3>
-    <canvas id="canvas" width="600" height="600"></canvas>    
-
-    <script>
-        show();
-    </script>
+<body>        
+    <canvas id="filu" width="600" height="600"></canvas>    
+    <script src="dist/filu.js"></script>
 </body>
 </html>
